lab 10 part 3
